--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "3.7.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "jest-enzyme": "7.0.1",
