--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "jest-enzyme": "7.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "6.0.0",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.1",
-    "react-test-renderer": "16.7.0"
+    "react-test-renderer": "16.7.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
