--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "3.7.0",
+    "@material-ui/icons": "3.0.1",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "jest-enzyme": "7.0.1",
