--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "3.7.0",
     "@material-ui/icons": "3.0.1",
+    "@material-ui/styles": "3.0.0-alpha.4",
+    "classnames": "2.2.6",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "jest-enzyme": "7.0.1",
+    "prop-types": "15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "6.0.0",
