--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "3.7.0",
     "@material-ui/icons": "3.0.1",
     "@material-ui/styles": "3.0.0-alpha.4",
+    "axios": "0.18.0",
     "classnames": "2.2.6",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
