--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=node",
+    "coverage": "react-scripts test --env=node --coverage",
     "eject": "react-scripts eject",
     "deploy": "npm run build && firebase deploy"
   },
@@ -38,5 +39,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "moxios": "0.4.0",
+    "redux-mock-store": "1.5.3"
+  }
 }
