--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,3 @@
-# version: 2
-# jobs:
-#   build:
-#     docker:
-#       - image: 'circleci/node:8'
-#     working_directory: ~/repo
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys:
-#             - 'v1-dependencies-{{ checksum "package.json" }}'
-#             - v1-dependencies-
-#       - run: 'yarn install'
-#       - save_cache:
-#           paths:
-#             - node_modules
-#           key: 'v1-dependencies-{{ checksum "package.json" }}'
-#       - run: 'yarn test'
-#       - run:
-#           name: 'Build Project'
-#           command: 'yarn build'
-#       - run:
-#           name: 'Deploy to Firebase Hosting'
-#           command: './node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN'
 defaults: &defaults
   docker:
     - image: circleci/node:8
@@ -92,4 +68,4 @@ workflows:
             - build
       - deploy-firebase:
           requires:
-            - tu
+            - test
