--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,3 +57,15 @@ jobs:
               './node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN'
               echo "Deployed to Firebase 🤓"
             fi
+workflows:
+  version: 2
+  build-test-and-deploy:
+    jobs:
+      - prepare
+      - build
+      - test:
+          requires:
+            - build
+      - deploy-firebase:
+          requires:
+            - test
